<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First Blackjack</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Button_Text">Press Me!</string>
    <string name="playerScore">Player Score</string>
    <string name="dealerScore">Dealer Score</string>
    <string name="exitButton">Drawing Cards</string>

</resources>
